checking new system

--- a/index.html
+++ b/index.html
@@ -52,4 +52,7 @@
         <p>In winter 2016 i went to Moscow to participate in creative internship as event manager / performer (such a thing exists) in main Cardboardia Embassy and its Made in Cardboardia worshop. 2 weeks went by and i ended up working with these wonderful people for almost a year. I did graphic design (ugh), copywriting, basic smm, internship management, and lots of 2-language writing and translation. Theater skills came in handy too, since from time to time i worked as a performer as well. Check it out here:</p>
       </div>
     </main>
+    <footer class="main-footer">
+      
+    </footer>
   </body>
